minor fixes. white space remove from mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: #110f17;
-  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -16,4 +15,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+html {
+  overflow-x: hidden;
 }
